v0.7.5b: Lots and lots of stuff filled in + changes made in response to game updates. Java 8 support added.