@@ -1,5 +1,6 @@
 package data.dataobjects;
 
+import com.google.common.collect.ImmutableMap;
 import data.databases.SlayerMonsterDatabase;
 import logic.Player;
 import logic.Requirement;
@@ -9,62 +10,60 @@ import java.util.Map;
 
 public enum SlayerMaster {
 
-    TURAEL("Turael", Map.ofEntries(
-        Map.entry(new SlayerAssignment("Banshees", 33), 30),
-        Map.entry(new SlayerAssignment("Bats", 33), 10),
-        Map.entry(new SlayerAssignment("Bears", 33), 10),
-        Map.entry(new SlayerAssignment("Birds", 33), 10),
-        Map.entry(new SlayerAssignment("Cave bugs", 33), 10),
-        Map.entry(new SlayerAssignment("Cave slimes", 33), 30),
-        Map.entry(new SlayerAssignment("Cows", 33), 10),
-        Map.entry(new SlayerAssignment("Crawling hands", 33), 30),
-        Map.entry(new SlayerAssignment("Desert lizards", 33), 30),
-        Map.entry(new SlayerAssignment("Dogs", 33), 15),
-        Map.entry(new SlayerAssignment("Dwarves", 33), 10),
-        Map.entry(new SlayerAssignment("Gelatinous abominations", 33), 10),
-        Map.entry(new SlayerAssignment("Ghosts", 33), 15),
-        Map.entry(new SlayerAssignment("Goblins", 33), 10),
-        Map.entry(new SlayerAssignment("Grotworms", 23), 15),
-        Map.entry(new SlayerAssignment("Icefiends", 15), 10),
-        Map.entry(new SlayerAssignment("Minotaurs", 33), 10),
-        Map.entry(new SlayerAssignment("Monkeys", 33), 10),
-        Map.entry(new SlayerAssignment("Pigs", 33), 10),
-        Map.entry(new SlayerAssignment("Scorpions", 33), 10),
-        Map.entry(new SlayerAssignment("Skeletons", 33), 15),
-        Map.entry(new SlayerAssignment("Spiders", 33), 10),
-        Map.entry(new SlayerAssignment("Trolls", 33), 10),
-        Map.entry(new SlayerAssignment("Wolves", 33), 15),
-        Map.entry(new SlayerAssignment("Zombies", 33), 10)
-        ), 0),
-    MAZCHNA("Mazchna", Map.ofEntries(
-        Map.entry(new SlayerAssignment("Banshees", 55), 20),
-        Map.entry(new SlayerAssignment("Bats", 55), 10),
-        Map.entry(new SlayerAssignment("Bears", 55), 10),
-        Map.entry(new SlayerAssignment("Catablepon", 55), 10),
-        Map.entry(new SlayerAssignment("Cave crawlers", 55), 20),
-        Map.entry(new SlayerAssignment("Cave slimes", 55), 10),
-        Map.entry(new SlayerAssignment("Cockatrices", 55), 20),
-        Map.entry(new SlayerAssignment("Crawling hands", 55), 20),
-        Map.entry(new SlayerAssignment("Cyclopes", 45), 10),
-        Map.entry(new SlayerAssignment("Desert lizards", 55), 10),
-        Map.entry(new SlayerAssignment("Dogs", 55), 10),
-        Map.entry(new SlayerAssignment("Flesh crawlers", 55), 10),
-        Map.entry(new SlayerAssignment("Ghouls", 55), 10),
-        Map.entry(new SlayerAssignment("Ghosts", 55), 10),
-        Map.entry(new SlayerAssignment("Grotworms", 30), 10),
-        Map.entry(new SlayerAssignment("Hill giants", 55), 10),
-        Map.entry(new SlayerAssignment("Hobgoblins", 55), 10),
-        Map.entry(new SlayerAssignment("Ice warriors", 55), 10),
-        Map.entry(new SlayerAssignment("Kalphites", 55), 10),
-        Map.entry(new SlayerAssignment("Mogres", 55), 10),
-        Map.entry(new SlayerAssignment("Pyrefiends", 55), 20),
-        Map.entry(new SlayerAssignment("Rock slugs", 55), 15),
-        Map.entry(new SlayerAssignment("Skeletons", 55), 10),
-        Map.entry(new SlayerAssignment("Vampyres", 55), 10),
-        Map.entry(new SlayerAssignment("Wall beasts", 15), 15),
-        Map.entry(new SlayerAssignment("Wolves", 33), 10),
-        Map.entry(new SlayerAssignment("Zombies", 33), 10)
-        ), 2.5);
+    TURAEL("Turael", ImmutableMap.<SlayerAssignment, Integer>builder()
+        .put(new SlayerAssignment("Banshees", 33), 30)
+        .put(new SlayerAssignment("Bats", 33), 10)
+        .put(new SlayerAssignment("Bears", 33), 10)
+        .put(new SlayerAssignment("Birds", 33), 10)
+        .put(new SlayerAssignment("Cave bugs", 33), 10)
+        .put(new SlayerAssignment("Cave slimes", 33), 30)
+        .put(new SlayerAssignment("Cows", 33), 10)
+        .put(new SlayerAssignment("Crawling hands", 33), 30)
+        .put(new SlayerAssignment("Desert lizards", 33), 30)
+        .put(new SlayerAssignment("Dogs", 33), 15)
+        .put(new SlayerAssignment("Dwarves", 33), 10)
+        .put(new SlayerAssignment("Gelatinous abominations", 33), 10)
+        .put(new SlayerAssignment("Ghosts", 33), 15)
+        .put(new SlayerAssignment("Goblins", 33), 10)
+        .put(new SlayerAssignment("Grotworms", 23), 15)
+        .put(new SlayerAssignment("Icefiends", 15), 10)
+        .put(new SlayerAssignment("Minotaurs", 33), 10)
+        .put(new SlayerAssignment("Monkeys", 33), 10)
+        .put(new SlayerAssignment("Pigs", 33), 10)
+        .put(new SlayerAssignment("Scorpions", 33), 10)
+        .put(new SlayerAssignment("Skeletons", 33), 15)
+        .put(new SlayerAssignment("Spiders", 33), 10)
+        .put(new SlayerAssignment("Trolls", 33), 10)
+        .put(new SlayerAssignment("Wolves", 33), 15)
+        .put(new SlayerAssignment("Zombies", 33), 10).build(), 0),
+    MAZCHNA("Mazchna", ImmutableMap.<SlayerAssignment, Integer>builder()
+        .put(new SlayerAssignment("Banshees", 55), 20)
+        .put(new SlayerAssignment("Bats", 55), 10)
+        .put(new SlayerAssignment("Bears", 55), 10)
+        .put(new SlayerAssignment("Catablepon", 55), 10)
+        .put(new SlayerAssignment("Cave crawlers", 55), 20)
+        .put(new SlayerAssignment("Cave slimes", 55), 10)
+        .put(new SlayerAssignment("Cockatrices", 55), 20)
+        .put(new SlayerAssignment("Crawling hands", 55), 20)
+        .put(new SlayerAssignment("Cyclopes", 45), 10)
+        .put(new SlayerAssignment("Desert lizards", 55), 10)
+        .put(new SlayerAssignment("Dogs", 55), 10)
+        .put(new SlayerAssignment("Flesh crawlers", 55), 10)
+        .put(new SlayerAssignment("Ghouls", 55), 10)
+        .put(new SlayerAssignment("Ghosts", 55), 10)
+        .put(new SlayerAssignment("Grotworms", 30), 10)
+        .put(new SlayerAssignment("Hill giants", 55), 10)
+        .put(new SlayerAssignment("Hobgoblins", 55), 10)
+        .put(new SlayerAssignment("Ice warriors", 55), 10)
+        .put(new SlayerAssignment("Kalphites", 55), 10)
+        .put(new SlayerAssignment("Mogres", 55), 10)
+        .put(new SlayerAssignment("Pyrefiends", 55), 20)
+        .put(new SlayerAssignment("Rock slugs", 55), 15)
+        .put(new SlayerAssignment("Skeletons", 55), 10)
+        .put(new SlayerAssignment("Vampyres", 55), 10)
+        .put(new SlayerAssignment("Wall beasts", 15), 15)
+        .put(new SlayerAssignment("Wolves", 33), 10)
+        .put(new SlayerAssignment("Zombies", 33), 10).build(), 2.5);
 
     private String name;
     private Map<SlayerAssignment, Integer> assignmentsWithWeights;
@@ -111,6 +110,6 @@ public enum SlayerMaster {
                 totalWeights += assignmentAndWeight.getValue();
             }
         }
-        return Map.of(totalXp/totalWeights, totalPoints/totalWeights);
+        return ImmutableMap.of(totalXp/totalWeights, totalPoints/totalWeights);
     }
 }
